gap variables naming fix for easier reusability

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -16,10 +16,12 @@ $primary-100: #232323;
 $primary-200: #c39d5f;
 
 //MARGINS
+$margin-xs: 20px;
 $margin-s: 30px;
+$margin-md: 44px;
 
 //GAPS
-$gap-xs: 4px; 
-$gap-sm: 14px; 
-$gap-md: 24px;
-$gap-xl: 54px;
+$gap-6: 24px;
+$gap-7: 26px;
+$gap-8: 28px;
+
